# StockQuantAssistant

./: .gitignore  README.md  current.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/algos/: decision.py  sequence.py  structure.py  trend.py
app/api/: routes.py
app/models/: database.py
app/scheduler/: job_scheduler.py
app/services/: analysis_service.py  chart_service.py  oss_sync.py  resample.py  stock_service.py  workflow_service.py
docs/: algorithm.md  api.md  db_table.md  design.md  server.md
e2e/: run.py  test_oss.py  test_parquet.py
tests/: conftest.py  test_algorithm.py  test_analysis_service.py  test_api.py  test_chart.py  test_database.py  test_integration.py  test_oss_sync.py  test_parquet_store.py  test_resample.py  test_stock_service.py  test_workflow_service.py
