[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockquant-assistant"
version = "0.1.0"
description = "股票量化助手 - 量化分析后端服务"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "StockQuant Team"},
]
keywords = ["stock", "quant", "finance", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "flask>=3.1.0",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "yfinance>=0.2.50",
    "apscheduler>=3.10.4",
    "pytz>=2024.2",
    "akshare>=1.18.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "moto[s3]>=5.0.0",
]

[project.scripts]
stockquant-server = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests", "tests.*", "e2e", "docs"]
